--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/Christopher-Willis/Application-Tracker-Server/issues"
   },
-  "homepage": "https://github.com/Christopher-Willis/Application-Tracker-Server#readme"
+  "homepage": "https://github.com/Christopher-Willis/Application-Tracker-Server#readme",
+  "dependencies": {
+    "compression": "^1.7.4",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.6.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1"
+  }
 }
